Fix several issues on smaller screens

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,5 +1,5 @@
 .site-header {
-  margin-bottom: $margin-big;
+  margin-bottom: $margin-base;
   padding-top: $margin-base;
 
   &__logo {
@@ -34,5 +34,7 @@
 }
 
 .content-wrapper {
-  padding: 0 $margin-big;
+  @media all and (min-width: $breakpoint-s +1) {
+    padding: 0 $margin-big;
+  }
 }
