--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -11,7 +11,10 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   margin: 0 0 $margin-base;
-  max-width: 800px;
+ 
+  @media all and (min-width: $breakpoint-s +1) {
+    max-width: 80%;
+  }
 }
 
 a {
